--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Flask App</title>
+    <title>Wizard Battle</title>
 </head>
 <body>
-    <h1>What action do you take?</h1>
+    <h1>What spell do you cast?</h1>
 
     <form method="POST" action="/start">
         <textarea name="text" rows="4" cols="50">
