--- a/templates/battle.html
+++ b/templates/battle.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <h1>Wizard Battle</h1>
+    <p>{{name1}} casts: {{spell1}}</p>
+    <p>{{name2}} casts: {{spell2}}</p>
     <p>{{description}}</p>
     <p>Winner: {{winner}}</p>
 </body>
