--- a/templates/choose.html
+++ b/templates/choose.html
@@ -2,54 +2,18 @@
 <html>
 <head>
   <title>Wizard Battle</title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-      font-size: 32pt;
-    }
-    .card-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      margin-top: 10px;
-    }
-    .card {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      border: 1px solid #000;
-      border-radius: 10px;
-      padding: 10px;
-      margin: 10px;
-      min-width: 160px;
-      text-align: center;
-      background: #ddd;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-    @media (max-width: 500px) {
-      .card {
-        min-width: auto;
-        flex: 1 1 100%;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
+  <img src="static/wizardbattle-logo-text.jpg" alt="Wizard Battle" style="width: min(75vw, 75vh); height:auto"/>
   <h1>Choose Your Wizard</h1>
   <div class="card-container">
     {% for wizard in wizards %}
     <div class="card">
-      <a href="/battlebegin?wizard={{ wizard.name }}" style="text-decoration: none;">
-          <img src="/static/{{ wizard.portrait_filename }}" alt="{{ wizard.name }}"><br/>
-        <p>{{ wizard.name }}</p>
+      <a href="/battlebegin?wizard={{ wizard.name }}" style="text-decoration: none; color: yellow;">
+          <video loop autoplay muted playsinline src="/static/{{ wizard.portrait_filename }}" alt="{{ wizard.name }}" style="width: 384px; height: 384px;"></video>
+          <br/>
+          <p>{{ wizard.name }}</p>
       </a> 
     </div>
     {% endfor %}
