Add footer with magic

--- a/templates/battlebegin.html
+++ b/templates/battlebegin.html
@@ -16,6 +16,10 @@
         </button>
     </form>
     <h5>Time remaining: <span id="timerseconds">20</span> seconds</h5>
+    <footer id="footer" style="margin-top:200px">
+        <video playsinline autoplay muted loop src="static/magic_beams.mp4" type="video/mp4" style="width: 100vw; height:auto;">
+        </video>
+    </footer>
     <script>
         var countdown = setInterval(function() {
             var timer = document.getElementById('timerseconds');
