--- a/templates/choose.html
+++ b/templates/choose.html
@@ -3,6 +3,8 @@
 <head>
   <title>Wizard Battle</title>
   <link rel="stylesheet" href="static/style.css">
+  <link rel="apple-touch-icon" href="static/wizard_battle_logo.jpg">
+  <link rel="icon" href="static/wizard_battle_logo.jpg">
 </head>
 <body>
   <img src="static/wizard_battle_logo.jpg" alt="Wizard Battle" style="width: min(75vw, 75vh); height:auto"/>
