Add video concat script

--- a/templates/choose.html
+++ b/templates/choose.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Wizard Battle</title>
+  <title>Scroll of the Rings II: Wizard Battle!</title>
   <link rel="stylesheet" href="static/style.css">
   <link rel="apple-touch-icon" href="static/wizard_battle_logo.jpg">
   <link rel="icon" href="static/wizard_battle_logo.jpg">
