--- a/templates/choose.html
+++ b/templates/choose.html
@@ -20,5 +20,8 @@
     </div>
     {% endfor %}
   </div>
+  <footer style="margin-top: 200px; font-size:12pt;">
+      <p>Made by <a href="https://lwneal.com">lwneal</a> for <a href="https://ldjam.com/">Ludum Dare 54</a></p>
+  </footer>
 </body>
 </html>
