Add "Couldn't think of a spell" message

--- a/templates/round1_results.html
+++ b/templates/round1_results.html
@@ -40,7 +40,7 @@
           <span>YOU HAVE LOST</span>
         {% endif %}
         <br />
-        <a href="/" style="font-size:48pt">PLAY AGAIN</a>
+        <a href="/" style="margin:top: 16px; font-size:52pt;">PLAY AGAIN</a>
     </p>
 </body>
 <script>
